--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -18,6 +18,10 @@ p{
     @apply border-gray-300 focus:border-indigo-300 focus:ring focus:ring-indigo-200 focus:ring-opacity-50 rounded-md shadow-sm;
 }
 
+.editable .ProseMirror{
+    @apply border form-input;
+}
+
 .prose-is-active{
     @apply text-blue-500;
 }
